<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>org.weaveworld</groupId>
  <artifactId>pl</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <graalvm.version>22.3.0</graalvm.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <jar.dir>${project.build.directory}/jars</jar.dir>
    <test.argLine>--upgrade-module-path='${jar.dir}/truffle-api.jar' --add-opens org.graalvm.sdk/org.graalvm.polyglot=ALL-UNNAMED --add-exports java.base/jdk.internal.module=ALL-UNNAMED</test.argLine>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.10</version>
        <executions>
          <execution>
            <id>copy</id>
            <phase>process-test-classes</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.graalvm.truffle</groupId>
                  <artifactId>truffle-api</artifactId>
                  <version>${graalvm.version}</version>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <destFileName>truffle-api.jar</destFileName>
                </artifactItem>
              </artifactItems>
              <outputDirectory>${jar.dir}</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <configuration>
          <downloadSources>true</downloadSources>
          <downloadJavadocs>true</downloadJavadocs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <includes>
            <include>**/*TestSuite.java</include>
            <include>**/*Test.java</include>
          </includes>
          <argLine>-Dgraalvm.locatorDisabled=true ${test.argLine}</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <finalName>pl</finalName>
              <artifactSet>
                <excludes>
                  <exclude>junit:junit</exclude>
                  <exclude>org.graalvm.truffle:truffle-api</exclude>
                  <exclude>org.graalvm.truffle:truffle-dsl-processor</exclude>
                  <exclude>org.graalvm.truffle:truffle-tck</exclude>
                  <exclude>org.graalvm:graal-sdk</exclude>
                </excludes>
              </artifactSet>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>17</source>
            <target>17</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <dependencies>
    <dependency><groupId>junit</groupId><artifactId>junit</artifactId><version>4.13.1</version><scope>test</scope></dependency>

    <dependency><groupId>org.graalvm.truffle</groupId><artifactId>truffle-api</artifactId><version>${graalvm.version}</version></dependency>
    <dependency><groupId>org.graalvm.truffle</groupId><artifactId>truffle-dsl-processor</artifactId><version>${graalvm.version}</version><scope>provided</scope></dependency>
    <dependency><groupId>org.graalvm.truffle</groupId><artifactId>truffle-tck</artifactId><version>${graalvm.version}</version><scope>provided</scope></dependency>
  </dependencies>
</project>
